--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "d3": "3.4.10",
     "express": "4.13.1",
-    "lodash": "3.10.1"
+    "lodash": "3.10.1",
+    "react": "0.13.3"
   }
 }
